--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,63 @@
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
+                {% for post in post_list %}
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <!-- EACH BLOG IS DISPLAYED ON A CARD -->
+                        <div class="card-body">
+                            <!-- THE FEATURE IMAGE FOR EACH POST -->
+                            <div class="image-container">
+                                <!-- PLACEHOLDER IS USED AS THE DEFAULT IMAGE IF NONE IS UPLOADED -->
+                                {% if "placeholder" in post.featured_image.url %}
+                                <img class="card-img-top"
+                                    src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
+                                <!-- OTHERWISE WE USE THE UPLOADED PHOTO -->
+                                {% else %}
+                                <img class="card-img-top" src=" {{ post.featured_image.url }}">
+                                {% endif %}
+                                <!-- AUTHOR DETAILS -->
+                                <div class="image-flash">
+                                    <p class="author">Author: {{ post.author }}</p>
+                                </div>
+                            </div>
+                            <!-- LINK TO POST-->
+                            <a href="#" class="post-link">
+                                <h2 class="card-title">{{ post.title }}</h2>
+                                <p class="card-text">{{ post.excerpt }}</p>
+                            </a>
+                            <hr />
+                            <!-- FONT AWESOME HEART AND COUNT FOR LIKES -->
+                            <p class="card-text text-muted h6">{{ post.created_on}} <i class="far fa-heart"></i>
+                                {{ post.number_of_likes }}</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- WE WANT POSTS DISPLAYED IN ROWS OF 3 -->
+                {% if forloop.counter|divisibleby:3 %}
+            </div>
+            <div class="row">
+                {% endif %}
+                {% endfor %}
 
             </div>
         </div>
     </div>
 
-</div>
+    <!-- PAGINATION CODE -->
+    
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
 
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
+</div>
 {%endblock%}
