--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %} {% block content %}
 
+{% load crispy_forms_tags %}
+
+
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
@@ -76,7 +79,26 @@
         </div>
         <div class="col-md-4 card mb-4  mt-3 ">
             <div class="card-body">
-                <!-- For later -->
+                <!-- CRISPY FORM BELOW-->
+                {% if commented %}
+                <div class="alert alert-success" role="alert">
+                    Your comment is awaiting approval
+                </div>
+                {% else %}
+                <!-- comment box only appears if user is authenticated -->
+                {% if user.is_authenticated %}
+
+                <h3>Leave a comment:</h3>
+                <p>Posting as: {{ user.username }}</p>
+                <form method="post" style="margin-top: 1.3em;">
+                    <!-- render form with crispy -->
+                    {{ comment_form | crispy }}
+                    <!-- Cross site request forgery, protection against attackers looking for vulnerabilities-->
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-signup btn-lg">Submit</button>
+                </form>
+                {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
