Fix typo preventing 'like' heart displaying

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -42,12 +42,12 @@
 
                                 {% if liked %}
                                 <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like">
-                                    <i class="fas fa heart"></i>
+                                    <i class="fas fa-heart"></i>
                                 </button>
 
                                 {% else %}
                                 <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like">
-                                    <i class="far fa heart"></i>
+                                    <i class="far fa-heart"></i>
                                 </button>
                                 {% endif %}
                             </form>
