Add successful message to posting comment

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -101,8 +101,8 @@
                 <!-- CRISPY FORM BELOW-->
                 <!-- if commented boolean is set to true as per views.py get/post-->
                 {% if commented %}
-                <div class="alert alert-success" role="alert">
-                    Your comment is awaiting approval
+                <div class="alert alert-success" role="alert" id="comment-id">
+                    Your comment was sent successfully. Check status below.
                 </div>
                 {% else %}
                 <!-- If commented is false the comment box appears -->
