Add successful message to posting comment correctlty

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -102,7 +102,7 @@
                 <!-- if commented boolean is set to true as per views.py get/post-->
                 {% if commented %}
                 <div class="alert alert-success" role="alert" id="comment-id">
-                    Your comment was sent successfully. Check status below.
+                    Your comment is pending approval. Please be patient.
                 </div>
                 {% else %}
                 <!-- If commented is false the comment box appears -->
